use a unique prefix for messages from the mp3 store

BUG:301245
FIXED-IN:2.7